manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-golang
spec:
  type: NodePort
  selector:
    app: hello-golang
  ports:
  - port: 8080
    targetPort: 8080

---
