manifests/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-golang
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - mason.dev.cloudkite.io
    secretName: hello-golang-tls
  rules:
  - host: mason.dev.cloudkite.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-golang
          servicePort: 8080

---
